--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
   --color-gray-300: rgb(229, 231, 235);
   --color-gray-500: rgb(51, 65, 85);
   --color-black-600: #010203;
+  --color-gray-200: rgb(229, 231, 235);
 }
